--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@swimlane/ngx-datatable",
-  "version": "11.1.5",
+  "name": "@nois/ngx-datatable",
+  "version": "11.1.10",
   "description": "ngx-datatable is a Angular2+ table grid component for presenting large and complex data.",
   "main": "release/index.js",
   "typings": "release/index.d.ts",
@@ -134,5 +134,8 @@
     "webpack-merge": "^4.1.1",
     "webpack-notifier": "^1.5.0",
     "zone.js": "^0.8.18"
+  },
+  "directories": {
+    "doc": "docs"
   }
 }
